changed context from 3rd to 1st person and fixed overflowing links

--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -61,6 +61,8 @@ body {
         color: $mainColor;
         text-decoration: none;
         cursor: pointer;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
 
         &#back-to-top {
             color: $white;
